modified:   index.html

--- a/index.html
+++ b/index.html
@@ -1,2 +1,13 @@
-<h1>It's Working</h1>
-<p>GOOD</p>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Hello World</title>
+        <meta charset="utf-8">
+    </head>
+    <body>
+        <div id="welcome">
+            <h1>Salut les gens</h1>
+            <h3>tEST</h3>
+        </div>
+    </body>
+</html>
