modified:   index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <div id="welcome">
             <h1>Salut les gens</h1>
-            <h3>tEST</h3>
+            <h3>Test</h3>
         </div>
     </body>
 </html>
